IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/1/14: Made Ccderaser able to erase points with large differences from their
neighbors in the border region where regular analysis is not done.

7/1/14: Changed Newstack antialiased reduction to give same image size and
centering as binning (In 4.7).
 
6/27/14: Added option to Alterheader to set space group and made Tilt set it
to 1 for tomogram output, following new MRC conventions (In 4.7).

6/25/14: Fixed problem keeping track of opened files when reading multiple
files into 3dmod.

6/24/14: Changed surface analysis in Tiltalign to fit a pair of parallel
planes instead of using two independent fits, which can give screwy angles and
distances; also output line saying when X-tilt or slope can't be measured.

6/22/14: IMOD_4-7-6
6/22/14: Allow robust alignment in Batchruntomo with patch tracking and
contours cut into pieces (In 4.7).

6/18/14: In eTomo - Tomogram Combination, fixed problems with validation and
handling missing tomograms (In 4.7).(Bug# 1803)

6/17/14: Added script Excludeviews for reversibly removing views from a tilt
series and saving them in another file.

6/17/14: Added option to Edmont for entering sections numbered from 1; made it
access piece list in .mdoc or HDF file; made it able to transfer metadata 
in .mdoc or HDF files from input to output.

6/17/14: Made Extracttilts able to output the metadata in an HDF file in
autodoc format.

6/17/14: In eTomo using the piece list file (when available) to open montaged
raw stacks in Reconstruction and Serial Sections (In 4.7).(Bug# 1801)

6/16/14: Remove 6/5/14 automatic use of .pl file, since it then uses it 
inappropriately on blended file.

6/6/14: Made Extractpieces and Extracttilts take information from an
associated .mdoc file automatically as a fallback and work with metadata in an
HDF file also; made Extracttilts able to extract the text strings for any